[project]
name = "contacts-api"
version = "0.1.0"
description = "A FastAPI-based contacts API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "uvicorn>=0.46.0",
    "pydantic>=2.13.3",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlmodel>=0.0.38",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
